<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pyk.codesample3.view.fragment.SpinFragment">

    <data>

        <variable
            name="movie"
            type="pyk.codesample3.model.item.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <github.hellocsl.cursorwheel.CursorWheelLayout
            android:id="@+id/cwl_moviespinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/cursorWheel"
            android:layout_margin="10dp" />

        <ProgressBar
            android:id="@+id/pb_poster"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="@id/iv_poster"
            app:layout_constraintTop_toTopOf="@id/iv_poster"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster"
            style="@style/progressBar" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cwl_moviespinner"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            style="@style/imagePoster"
            app:layout_constraintWidth_percent="0.3"
            android:contentDescription="@string/poster_description"
            app:poster="@{movie}" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cwl_moviespinner"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            style="@style/textTitle"
            android:text="@string/default_title"
            app:title="@{movie}" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textRelease"
            android:text="@string/default_date"
            app:release="@{movie}" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_release"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textRating"
            android:text="@string/default_rating"
            app:rating="@{movie}" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textBody"
            android:lines="5"
            android:text="@string/default_description"
            app:overview="@{movie}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>