<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="pyk.codesample3.view.fragment.AboutFragment"
        android:label="@string/navigation_label_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="pyk.codesample3.view.fragment.DetailsFragment"
        android:label="@string/navigation_label_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="movie"
            app:argType="pyk.codesample3.model.item.Movie" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="pyk.codesample3.view.fragment.ListFragment"
        android:label="@string/navigation_label_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_spinFragment"
            app:destination="@+id/spinFragment" />
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/spinFragment"
        android:name="pyk.codesample3.view.fragment.SpinFragment"
        android:label="@string/navigation_label_fatedecide"
        tools:layout="@layout/fragment_spin">
        <action
            android:id="@+id/action_spinFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
</navigation>