<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="pyk.codesample3.model.item.Movie" />

        <variable
            name="clickListener"
            type="pyk.codesample3.view.adapter.MovieListener" />

        <variable
            name="checkedListener"
            type="pyk.codesample3.view.adapter.CheckedListener" />

        <variable
            name="index"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:background="#ffffff"
        android:onClick="@{() -> clickListener.onClick(movie)}">

        <ProgressBar
            android:id="@+id/pb_poster"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@id/iv_poster"
            app:layout_constraintEnd_toEndOf="@id/iv_poster"
            app:layout_constraintTop_toTopOf="@id/iv_poster"
            app:layout_constraintBottom_toBottomOf="@id/iv_poster" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/imagePoster"
            android:contentDescription="@string/poster_description"
            app:poster="@{movie}" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textItemTitle"
            android:text="@string/default_longtitle"
            android:ellipsize="end"
            android:maxLines="2"
            app:title="@{movie}" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textItemRelease"
            android:text="@string/default_date"
            app:release="@{movie}" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            style="@style/textItemRating"
            android:text="@string/default_rating"
            app:rating="@{movie}" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            style="@style/checkbox"
            android:onClick="@{() -> checkedListener.onChecked(index)}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>