<resources>
    <string name="app_name">CodeSample3</string>
    <string name="about">About</string>
    <string name="poster_description">The Movies Poster Image</string>
    <string name="backdrop_description">The Movies Backdrop Image</string>
    <string name="default_title">Default Movie Title</string>
    <string name="default_date">1980 – 01 – 01</string>
    <string name="default_rating">9.9 / 10</string>
    <string name="default_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="default_longtitle">Very Long Default Movie Title to Stretch 2 Lines and Then Some Oh God I Really Have To Make This Really Long What Movie Title Is This Long?</string>
    <string name="about_string">
        Movie data gathered from The Movie Database themoviedb.org
        \n\nIcons from material.io/resources/icons
        \n\n3rd party API\'s used:
        \nCursor Wheel Layout - github.com/BCsl/CursorWheelLayout
        \nVolley - github.com/google/volley
        \nGson - github.com/google/gson
        \nGlide - github.com/bumptech/glide
        \nCircularImageView - github.com/lopspower/CircularImageView
    </string>
    <string name="not_enough_movies">Too few movies selected!</string>
    <string name="too_many_movies">Too many movies selected!</string>
    <string name="spinner_rules">Select 2 – 6 movies and let fate decide your night!</string>
    <string name="no_more_movies">No More Movies!</string>
    <string name="no_internet">Failed to get Movie data! Check your internet!</string>
    <string name="navigation_label_about">About This App</string>
    <string name="navigation_label_details">Movie Details</string>
    <string name="navigation_label_list">Movie List</string>
    <string name="navigation_label_fatedecide">Let Fate Decide!</string>
</resources>
